# c-code-samples

./: .gitattributes  .gitignore  Code samples C.sln  Directory.Build.props  Makefile  README.md  build_and_test.sh  circle.h  compare_pixels.c  copy.h  lab1call.c  lab1kakN3250.c  lab1kakN3250_OLD.c  libkakN3250.c  main.c  main_old.c  mirror.h  plugin_api.h  test_circle.sh  test_copy.sh  test_copy_custom.sh  test_mirror.sh  test_save_load.sh  types.h  utils.h  valgrind.txt  Функциональные требования.docx
Backup/: lab1kakN3250_Backup.c  main.c
Code samples C/: Code samples C.c  Code samples C.vcxproj  Code samples C.vcxproj.filters  Converter.h  FileIO.h  MatrixInt.h  StrHelper.h  String.h  StringList.h  stdafx.cpp  stdafx.h
Code samples C.Tests/: Code samples C.Tests.vcxproj  Code samples C.Tests.vcxproj.filters  Tests.c
Legacy/asm-c-binary-insertion-sort/: Makefile  README.md
Legacy/asm-c-binary-insertion-sort/include/: vehicle.h
Legacy/asm-c-binary-insertion-sort/preservation/: file-metadata.csv
Legacy/asm-c-binary-insertion-sort/preservation/original-backup/: data.h  inrnd.c  main.asm  main.c  output.c  perimeter.asm  perimeter.lst  sorts.c
Legacy/asm-c-binary-insertion-sort/preservation/original-current/: extdata.h  input.c  main.c  makefile  perimeter.asm  perimeter.lst  sorts.s
Legacy/asm-c-binary-insertion-sort/src/: binary_insertion_sort.asm  demo.c  reference_sort.c
Legacy/asm-c-binary-insertion-sort/tests/: sort_test.c
Legacy/c-array-exercises-2016/: .gitattributes  CMakeLists.txt  README.md
Legacy/c-array-exercises-2016/docs/: stage-catalog.md
Legacy/c-array-exercises-2016/legacy/Lab 5/: Lab 5.sln
Legacy/c-array-exercises-2016/legacy/Lab 5/Lab 5/: Lab 5.vcxproj
Legacy/c-array-exercises-2016/legacy/lab1изменение размера массива/: lab1изменение размера массива.sln
Legacy/c-array-exercises-2016/legacy/lab1изменение размера массива/lab1изменение размера массива/: Source.c
Legacy/c-array-exercises-2016/preservation/: summary.json
Legacy/c-array-exercises-2016/scripts/: test.ps1
Legacy/c-array-exercises-2016/src/: array_exercises.c  array_exercises.h
Legacy/c-array-exercises-2016/tests/: array_exercises_tests.c
Legacy/c-file-finder-plugin/: CMakeLists.txt  README.md
Legacy/c-file-finder-plugin/legacy/current/: libkakN3250.c  plugin_api.h  structures.h
Legacy/c-file-finder-plugin/preservation/: README.md  file-finder-current-entries.csv  file-finder-old-entries.csv
Legacy/c-file-finder-plugin/scripts/: test.ps1
Legacy/c-file-finder-plugin/src/: byte_frequency.c  byte_frequency.h
Legacy/c-file-finder-plugin/tests/: byte_frequency_tests.c
Legacy/c-memory-pool-study-2016/: CMakeLists.txt  README.md
Legacy/c-memory-pool-study-2016/docs/: stage-catalog.md
Legacy/c-memory-pool-study-2016/include/: memory_pool.h
Legacy/c-memory-pool-study-2016/legacy/C++/Код C++/MemoryManager/: MemoryManager.sln
Legacy/c-memory-pool-study-2016/legacy/C++/Код C++/MemoryManager/MemoryManager/: MemoryManager.vcxproj.filters
Legacy/c-memory-pool-study-2016/legacy/C++/Код C++/MemoryManagerC++/MemoryManagerC++/: MemoryManagerC++.cpp
Legacy/c-memory-pool-study-2016/legacy/C++/Код C++/MemoryManagerRC/: MemoryManagerRC.sln
Legacy/c-memory-pool-study-2016/legacy/C++/Код C++/MemoryManagerRC/MemoryManagerRC/: memallocator.c  memallocator.h
Legacy/c-memory-pool-study-2016/preservation/: file-metadata.csv  summary.json
Legacy/c-memory-pool-study-2016/scripts/: test.ps1
Legacy/c-memory-pool-study-2016/src/: memory_pool.c
Legacy/c-memory-pool-study-2016/tests/: memory_pool_tests.c
Samples/png-image-tool/: CMakeLists.txt  README.md  vcpkg.json
Samples/png-image-tool/docs/: original-requirements.md
Samples/png-image-tool/include/png_image_tool/: cli.h  image.h  operations.h  png_io.h
Samples/png-image-tool/scripts/: test.ps1
Samples/png-image-tool/src/: cli.c  image.c  main.c  operations.c  png_io.c
Samples/png-image-tool/tests/: core_tests.c  png_io_tests.c
TestFiles/49/: 49_3.txt
TestFiles/50/: 50_1.txt
TestFiles/51/: 51.txt
TestFiles/52/: 52.txt
TestFiles/53/: 53_7.txt
docs/: refactoring-analysis.md  stage-catalog.md
lab1testExample/: lab1call.c
legacy/Lab 5/Lab 5/: Source.c
legacy/lab1изменение размера массива/lab1изменение размера массива/: lab1изменение размера массива.vcxproj
preservation/: file-metadata.csv  original-tree.txt  summary.json
scripts/: test.ps1
(+12 files in other folders)
